--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -8,6 +8,11 @@
             <input id='id_new_item' name='item_text' placeholder="Enter a to-do item"/>
             {% csrf_token %}
         </form>
+
+        <table id='id_list_table'>
+            {% for item in items %}
+            <tr><td>{{ forloop.counter }}: {{ item.text }}</td></tr>
+            {% endfor %}
         </table>
     </body>
 </html>
