added functional test for center inputbox

--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -5,8 +5,11 @@
     <body>
         <h1>Your To-Do List</h1>
         <form method="POST" action='/lists/new'>
-            <input id='id_new_item' name='item_text' placeholder="Enter a to-do item"/>
-            {% csrf_token %}
+            <p style="text-align: center;">
+            
+                <input id='id_new_item' name='item_text' placeholder="Enter a to-do item"/>
+                {% csrf_token %}
+            </p>
         </form>
         </table>
     </body>
