--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -1,16 +1,5 @@
-<html>
-    <head>
-    <title>To-Do lists</title>
-    </head>
-    <body>
-        <h1>Your To-Do List</h1>
-        <form method="POST" action='/lists/new'>
-            <p style="text-align: center;">
-            
-                <input id='id_new_item' name='item_text' placeholder="Enter a to-do item"/>
-                {% csrf_token %}
-            </p>
-        </form>
-        </table>
-    </body>
-</html>
+{% extends 'base.html' %}
+
+{% block header_text %}Start a new To-Do list{% endblock %}
+
+{% block form_action %}/lists/new{% endblock %}
